# retailMatch

./: .gitattributes  README.md  config.yaml  main.py  pyproject.toml  requirements.txt  wdc_generator.py
data/cikm16/: product-categories.csv  train-item-views.csv  train-purchases.csv  train-queries.csv
etl/: abt_buy.py  cikm16.py  ddl_duckdb.sql  ddl_postgres.sql  esci.py  utils.py  wdc_products.py
